<resources>
    <string name="app_name">ProjectApp431</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_nameTv">First Name</string>
    <string name="first_nameEt">First</string>
    <string name="last_nameTv">Last Name</string>
    <string name="last_nameEt">Last</string>
    <string name="emailTv">Email</string>
    <string name="emailEt">myexample@yahoo.com</string>
    <string name="addressEt">7800 York Rd</string>
    <string name="addressTv">Address</string>
    <string name="cityTv">City</string>
    <string name="cityEt">Towson</string>
    <string name="stateTv">State</string>
    <string name="updateBtn">Update</string>
    <string name="action_settings">Set Spending Limit</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="expense_name">Expense Name:</string>
    <string name="name">Name</string>
    <string name="amount">Amount:</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="expense_category">Expense Category:</string>
    <string name="date">Date:</string>
    <string name="date_of_expense">Date of Expense</string>
    <string name="save">Save</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>

    <string-array name="category_array">
        <item>Groceries</item>
        <item>Gas</item>
        <item>Eating Out</item>
        <item>Entertainment</item>
        <item>Shopping</item>
        <item>Personal Care</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="state_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="goHomeBtn">Home</string>
    <string name="home_page">Home Page</string>
    <string name="today_s_remaining_budget">Today\'s Remaining Budget:</string>
    <string name="today_s_expenses">Today\'s Expenses:</string>
    <string name="edit_savings_profile">Edit Savings Profile</string>
</resources>
